# InterviewPrepBot

./: interviewPrepAgent.ipynb  main.py  pyproject.toml
