[project]
name = "interviewprepbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio>=6.6.0",
    "load-dotenv>=0.1.0",
    "nest-asyncio>=1.6.0",
    "openai-agents[litellm]>=0.9.3",
    "python-dotenv>=1.2.1",
    "requests",
]
